<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_medium"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/title_update_pass"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans_medium"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_update_pass_message"
        android:textColor="#B3A8A8"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_new_pass"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/dm_sans_medium"
        android:background="@drawable/bg_edittext_rect"
        android:backgroundTint="#2EE0DBDB"
        android:hint="@string/title_hint_new_pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_new_pass_confirm"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext_rect"
        android:backgroundTint="#2EE0DBDB"
        android:ems="10"
        android:fontFamily="@font/dm_sans_medium"
        android:hint="@string/title_hint_confirm_new_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_rounded"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_new_pass_button_save"
        android:textSize="24sp"
        app:backgroundTint="#B6B0B0" />
</LinearLayout>