<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    tools:context=".LoginActivity">

    <ImageView
        android:onClick="do_exit"
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@mipmap/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_welcome"
        android:textColor="#070707"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/title_login_ask_for_signup"
            android:textColor="#B3A8A8"
            android:textSize="20sp" />

        <TextView
            android:onClick="do_open_register"
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/dm_sans_medium"
            android:text="@string/title_login_link_signup"
            android:textColor="#063B06"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_rect"
        android:backgroundTint="#2EE0DBDB"
        android:ems="10"
        android:fontFamily="@font/dm_sans_medium"
        android:hint="@string/title_login_hint_username"
        android:inputType="text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext_rect"
        android:backgroundTint="#2EE0DBDB"
        android:ems="10"
        android:fontFamily="@font/dm_sans_medium"
        android:hint="@string/title_login_hint_password"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chkSaveInfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_save_information"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button_rounded"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_button_signin"
        android:textSize="20sp"
        app:backgroundTint="#B6B0B0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_rounded"
            app:srcCompat="@mipmap/ic_google" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_button_rounded"
            app:srcCompat="@mipmap/ic_facebook" />
    </LinearLayout>

    <TextView
        android:onClick="do_open_forgot_password"
        android:id="@+id/txtBackSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/title_login_forgot_password"
        android:textSize="20sp" />



</LinearLayout>
